--- a/hero.html
+++ b/hero.html
@@ -92,7 +92,7 @@
        <!--holiday section design-->
        <section class="holiday">
          <div class="holiday-images">
-         <img src="holi.jpg">
+         <img src="images/holi.jpg">
          </div>
          <div class="holiday-text">
           <h5>east nusa tengga</h5>
@@ -114,17 +114,17 @@
          </div>
           <div class="tour-content">
            <div class="box">
-         <img src="tt.webp">
+         <img src="images/tt.webp">
          <h6>East java</h6>
          <h4>Mount Bromo</h4>
            </div>
            <div class="box">
-         <img src="pp.jpg">
+         <img src="images/pp.jpg">
          <h6>mout bromo<!--  --></h6>
          <h4>Phonex ancient town</h4>
            </div>
            <div class="box">
-         <img src="china.jpg">
+         <img src="images/china.jpg">
          <h6>East java</h6>
          <h4>Temple of heaven</h4>
            </div>
@@ -144,7 +144,7 @@
                     <a href="#" class="btn">Read More</a>
             </div>
             <div class="culture-images">
-               <img src="vv.jpg">
+               <img src="images/vv.jpg">
             </div>
           </section>
 
