--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
   <div class="feature-content">
     <div class="row">
       <div class="row-images">
-        <img src="oo.png" alt="">
+        <img src="/Images/oo.png" alt="">
       </div>
       <h4 class="Sky-Tours">Sky Tours</h4>
     </div>
     <div class="row">
       <div class="row-images">
-        <img src="mm.png" alt="">
+        <img src="/Images/mm.png" alt="">
       </div>
       <h4>Mountain Hike</h4>
     </div>
     <div class="row">
       <div class="row-images">
-        <img src="nn.png" alt="">
+        <img src="/Images/nn.png" alt="">
       </div>
       <h4>Forest Walk</h4>
     </div>
    <div class="row">
       <div class="row-images">
-        <img src="cc.png" alt="">
+        <img src="/Images/cc.png" alt="">
       </div>
       <h4> Bourn Fire</h4>
     </div>
     <div class="row">
     <div class="row-images">
-        <img src="pp.png" alt="">
+        <img src="/Images/pp.png" alt="">
       </div>
       <h4> beaches</h4>
     </div>
